--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ about_content: |
   at the **Sharif University of Technology**, **Computer Engineering** field. 
   I have +3 years of research experience in the fields of computer vision and machine learning; 
   For the last four months, under the supervision of Prof. Rueckert at **Technical University of Munich**, As an Undergrad RA 
-  I have been working on Gait-disorder recognition using a spatio-temporal human-skeleton graph, at the intersection of geometric deep learning and semi-supervised learning.
+  I have been working on human-pose action recognition using spatio-temporal human-skeleton graphs, at the intersection of geometric deep learning and semi-supervised learning.
   From May-Nov 2022, I was a research intern at the **Technical University of Munich** 
   working on explainability in graph neural networks under the co-supervision of Prof. Navab and 
-  Prof. Rueckert. For +1.5 years, I was an R&D scientist at AI-Med where on the ML academic side, our main contribution was to tackle the current 
+  Prof. Rueckert. For +1.5 years, I was an R&D scientist at CommaMed where on the ML academic side, our main contribution was to tackle the current 
   issues of pooling layers and bring a novel attention-based pooling layer by using weakly-supervised learning, under the supervision of Prof. Rabiee. I also have 1 year of experience 
   in the Reinforcement Learning field working on agent movement within a maze using 
   contrastive learning methods. My research interests are **Computer Vision**, **Geometric Deep Learning**, **Explainable Machine Learning**, and **Causality**.
