--- a/_config.yml
+++ b/_config.yml
@@ -30,21 +30,27 @@ about_content: |
   contrastive learning methods. My research interests are **Computer Vision**, **Geometric Deep Learning**, **Explainable Machine Learning**, and **Causality**.
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
-    - Reading books: I am a big fan of Fantasy books, and mostly
-    spend my leisure time reading them in English. Sometimes I really feel sick of this world, and I'd like to put my mind away from it and live through the other ones. Besides, for me, the most joyful and cheapest way of journeying is reading books. Here I bring what was the main point of the Author in his/her books:
-      - J.R.R Tolkien's Valar, Numenor, and Middle-earth history: I read the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series of sir Tolkien, following his universe, and perceiving many things
-      like the instinct consequences of envying, seeking the immortality, and how evil wills finish at the end. In addition, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
-      Besides, Sir Tolkien represented that a very important factor to create a strong group is by using the wisdom and knowledge of experienced people (Gandalf the Grey, Galadriel, Theoden the King, ...) alongside the energy and 
-      efforts of youth (Hobbits). And in all stages of your life counseling could highly assist you in taking better paths. Eru lluvatar, the father of all, determined that Men race should rule the earth after Sauron's doom, so this means we are descendants of the Men, 
-      but I wish that we all were from Eldar races because I believe some of us really need more wisdom in our choices.
-      - J.K. Rowling's Harry Potter series: I read all seven books of miss Rowling, and I believe that besides strong imagination and a very friendly world, miss Rowling tried to depict that the only reason for anyone who seeks immortality is to have huge power over all beings. 
+    - **Reading books**: I am a big fan of Fantasy books, and mostly
+    spend my leisure time reading them. Books are the first things that can help me put my mind away from this world and live through the other ones. Besides, the most joyful and cheapest way of journeying for me is reading books. Here I bring what I understood about the main point of the Author in his/her books:
+      - <i> J.R.R Tolkien's Valar, Numenor, and Middle-earth history </i>: I read all masterpieces of sir Tolkien, the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series, going through his universe (and probably ours), and perceiving many things
+      like the instinct consequences of envying, seeking the immortality, and how evil wills shall finish at the end. Besides, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
+      I believe sir Toklien tries to represent **what is the purpose of LIFE?**
+      At last, I'd like to share the quotes that I encountered during my reading:
+        - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
+        - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
+          that you each shall tread are already laid before your feet, though do not see them.
+        - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
+        - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
+        - Túrin Turambar: Grief is a hone to a hard mind.
+        - Sador (Labadal): A man that flies from his fear may find that he has only taken a shortcut to meet it.
+      - <i> J.K. Rowling's Harry Potter series </i>: I read all seven books of miss Rowling, and I believe that besides strong imagination and a very friendly world, miss Rowling tried to depict that the only reason for anyone who seeks immortality is to have huge power over all beings. 
       And this is the darkest goal because it is possible only by leaving your pure and single soul, and this could be done only by one action: Split your soul by murdering. By doing so (Like murdering Harry's parents), the seeker automatically creates his enemies 
-      and their motivations. You can never seek immortality without making your enemies, that's the point. And you can never perish your enemies because the pure LOVE (like between mother and son) creates an immense power inside them and you can not persist against it.
-      What's interesting is that Harry maintains this power, but in my opinion, he was very idiot most of the time :). Therefore (same as in Lord of The Rings) there must be people with high wisdom and knowledge (e.g. Dumbledore) to help you employ this motivation very delicately and efficiently. If there are no such people or leaders, 
+      and their motivations. You can never seek immortality without making your enemies, that's the point. And you can never perish your enemies because an immense power, e.g. the pure LOVE between mother and son, would be created inside the victims (e.g. Harry) that is impossible to resist against it.
+      What's interesting is that Harry maintains this power, but in my opinion, he was very idiot most of the time :). Therefore (same as in Lord of The Rings) there must be people with high wisdom and knowledge (e.g. Dumbledore) to help you employ this motivation and energy very delicately and efficiently. If there are no such people or leaders, 
       then this motivation could also perish very easily because of your silliness.  
-      - Andrzej Sapkowski's Witcher series: ...
-    - Watching movies
-    - Travelling and nature
+      - <i> Andrzej Sapkowski's Witcher series </i>: ...
+    - **Watching movies**
+    - **Travelling and nature**
 content:
   - title: Experience
     layout: list
