--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,11 @@ more_content: |
     spend my leisure time reading them. Books are the first things that can help me put my mind away from this world and live through the other ones. Besides, the most joyful and cheapest way of journeying for me is reading books. Here I bring what I understood about the main point of the Author in his/her books:
       - <i> J.R.R Tolkien's Valar, Numenor, and Middle-earth history </i>: I read all masterpieces of sir Tolkien, the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series, going through his universe (and probably ours), and perceiving many things
       like the instinct consequences of envying, seeking the immortality, and how evil wills shall finish at the end. Besides, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
-      I believe sir Toklien tries to represent **what is the purpose of LIFE?**
+      I believe sir Tolkien tries to represent **what is the purpose of LIFE?**
       At last, I'd like to share the quotes that I encountered during my reading:
         - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
         - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
-          that you each shall tread are already laid before your feet, though do not see them.
+          that you each shall tread are already laid before your feet, though you do not see them.
         - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
         - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
         - Túrin Turambar: Grief is a hone to a hard mind.
