--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
     - **Reading books**: I am a big fan of Fantasy books, and mostly
     spend my leisure time reading them. Books are the first things that can help me put my mind away from this world and live through the other ones. Besides, the most joyful and cheapest way of journeying for me is reading books. Here I bring what I understood about the main point of the Author in his/her books:
-      - <i> J.R.R Tolkien's Valar, Numenor, and Middle-earth history </i>: I read all masterpieces of sir Tolkien, the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series, going through his universe (and probably ours), and perceiving many things
+      - <i> J.R.R Tolkien's Valinor, Numenor, and Middle-earth history </i>: I read all masterpieces of sir Tolkien, the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series, going through his universe (and probably ours), and perceiving many things
       like the instinct consequences of envying, seeking the immortality, and how evil wills shall finish at the end. Besides, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
       I believe sir Tolkien tries to represent **what is the purpose of LIFE?**
       At last, I'd like to share the quotes that I encountered during my reading:
