--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ more_content: |
       I believe sir Tolkien tries to represent **what is the purpose of LIFE?**
       At last, I'd like to share the quotes that I encountered during my reading:
         - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
-        - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
-          that you each shall tread are already laid before your feet, though you do not see them.
+        - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road (=overthinking). Maybe the paths 
+          that you each shall tread are already laid before your feet, though you do not see them (=Take steps more than think of the path; the path will show itself).
         - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
         - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
         - Túrin Turambar: Grief is a hone to a hard mind.
