--- a/_config.yml
+++ b/_config.yml
@@ -31,18 +31,24 @@ about_content: |
 more_content: |
   Alongside my interests in science and technology, some of my other hobbies are:
     - **Reading books**: I am a big fan of Fantasy books, and mostly
-    spend my leisure time reading them. Books are the first things that can help me put my mind away from this world and live through the other ones. Besides, the most joyful and cheapest way of journeying for me is reading books. Here I bring what I understood about the main point of the Author in his/her books:
-      - <i> J.R.R Tolkien's Valinor, Numenor, and Middle-earth history </i>: I read all masterpieces of sir Tolkien, the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series, going through his universe (and probably ours), and perceiving many things
-      like the instinct consequences of envying, seeking the immortality, and how evil wills shall finish at the end. Besides, what are our fates, the reasons behind our being, and the paths we would take in our lives, which all lead to a single target. 
-      I believe sir Tolkien tries to represent **what is the purpose of LIFE?**
-      At last, I'd like to share the quotes that I encountered during my reading:
-        - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
-        - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road (=overthinking). Maybe the paths 
-          that you each shall tread are already laid before your feet, though you do not see them (=Take steps more than think of the path; the path will show itself).
-        - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
-        - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
-        - Túrin Turambar: Grief is a hone to a hard mind.
-        - Sador (Labadal): A man that flies from his fear may find that he has only taken a shortcut to meet it.
+    spend my leisure time reading them. Books are the first things that can help me put my mind away from this world and live through the other ones. Besides, the most joyful and cheapest way of journeying for me is reading books. Here I listed a brief description of my understanding of several of them:
+      - <i> J.R.R Tolkien's Valinor, Numenor, and Middle-earth history </i>: I traveled through sir Talkien's universe (and probably ours) by reading his masterpieces, including the <i> Silmarillion </i>, <i> Unfinished Tales </i>, <i> Hobbit </i>, and <i> Lord of the Rings </i> series.
+      He represents the life of the Evil and Eru Illuvatar's descendants for three ages with the main subject of standing against the Evil, though we should know ourselves better for this purpose:
+        - Envying and the Evil: Basically, There is no Evil, but envying is the thing that creates its root as the Morgoth envied the fair land of Valinor. Directing all your behaviors, including cupidity, towards envying 
+        can grow the evil inside yourself. But Evil always loses because instinctively, following evil wills closes one's mind towards the things that potentially could become the first motifs towards 
+        its destruction. That's why evil will always end at its starting point. I believe permanently removing jealousy inside ourselves is difficult, but we are the ones choosing how to direct our actions afterward. Besides, we all possess the same good and bad features since we were born, though our choices determine us to become Evil or.
+        - Fate: During the story, all are taking a path in their lives, but incredibly these paths are somehow related to each other as they all lead to the same target. One of my main concerns was why we all live in this world. why there should be 8 billion people on the earth? What of it? During the story, sir Tolkien demonstrates a single target: Perishing Evil. This is something that always exists till the end, and 
+        the path that one takes determines his side. So the point is these paths are like small intervals that concatenate into a bigger path, one leading to a finite evil end, and the other one to reach infinity. After all, Life's span is short-term, so that's why many people exist to reach the goal of the one path and our final fate.
+        - Hope and despair: Basically, there is no despair in life. Despair is created in the human mind to justify laziness and loss. Life always shows a hole in your solution, though you should find and take your step. Overthinking assists you in despair, and that's why we should take more steps in our lives rather than think about the steps.
+
+        At last, I'd like to share the quotes that I encountered during my reading:
+          - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
+          - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road (=overthinking). Maybe the paths 
+            that you each shall tread are already laid before your feet, though you do not see them (=Take steps more than think of the path; the path will show itself).
+          - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
+          - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
+          - Túrin Turambar: Grief is a hone to a hard mind.
+          - Sador (Labadal): A man that flies from his fear may find that he has only taken a shortcut to meet it.
       - <i> J.K. Rowling's Harry Potter series </i>: I read all seven books of miss Rowling, and I believe that besides strong imagination and a very friendly world, miss Rowling tried to depict that the only reason for anyone who seeks immortality is to have huge power over all beings. 
       And this is the darkest goal because it is possible only by leaving your pure and single soul, and this could be done only by one action: Split your soul by murdering. By doing so (Like murdering Harry's parents), the seeker automatically creates his enemies 
       and their motivations. You can never seek immortality without making your enemies, that's the point. And you can never perish your enemies because an immense power, e.g. the pure LOVE between mother and son, would be created inside the victims (e.g. Harry) that is impossible to resist against it.
