--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,8 @@ more_content: |
 
         At last, I'd like to share the quotes that I encountered during my reading:
           - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
+          - J.R.R. Tolkien: Many that live deserve death. And some that die deserve life. Can you give it to them?
+            Then do not be too eager to deal out death in judgement. For even the very wise cannot see all ends.
           - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
             that you each shall tread are already laid before your feet, though you do not see them.
           - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
