--- a/_config.yml
+++ b/_config.yml
@@ -42,19 +42,32 @@ more_content: |
         - Hope and despair: Basically, there is no despair in life. Despair is created in the human mind to justify laziness and loss. Life always shows a hole in your solution, though you should find and take your step. Overthinking assists you in despair, and that's why we should take more steps in our lives rather than think about the steps.
 
         At last, I'd like to share the quotes that I encountered during my reading:
-          - Gandalf The Grey: Despair is for those who see the end beyond all doubt.
-          - Lady Galadriel: Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
+          - Despair is for those who see the end beyond all doubt.
+          - Do not trouble your hearts overmuch with the thought of the road. Maybe the paths 
             that you each shall tread are already laid before your feet, though you do not see them.
-          - Theoden the King: Evil will shall evil mar: Evil intentions often shall destroy evil itself.
-          - Gandalf The Grey: Help comes from the hands of the weak when Wise flattered.
-          - Túrin Turambar: Grief is a hone to a hard mind.
-          - Sador (Labadal): A man that flies from his fear may find that he has only taken a shortcut to meet it.
+          - Evil will shall evil mar: Evil intentions often shall destroy evil itself.
+          - Help comes from the hands of the weak when Wise flattered.
+          - Grief is a hone to a hard mind.
+          - A man that flies from his fear may find that he has only taken a shortcut to meet it.
       - <i> J.K. Rowling's Harry Potter series </i>: I read all seven books of miss Rowling, and I believe that besides strong imagination and a very friendly world, miss Rowling tried to depict that the only reason for anyone who seeks immortality is to have huge power over all beings. 
       And this is the darkest goal because it is possible only by leaving your pure and single soul, and this could be done only by one action: Split your soul by murdering. By doing so (Like murdering Harry's parents), the seeker automatically creates his enemies 
       and their motivations. You can never seek immortality without making your enemies, that's the point. And you can never perish your enemies because an immense power, e.g. the pure LOVE between mother and son, would be created inside the victims (e.g. Harry) that is impossible to resist against it.
       What's interesting is that Harry maintains this power, but in my opinion, he was very idiot most of the time :). Therefore (same as in Lord of The Rings) there must be people with high wisdom and knowledge (e.g. Dumbledore) to help you employ this motivation and energy very delicately and efficiently. If there are no such people or leaders, 
       then this motivation could also perish very easily because of your silliness.  
-      - <i> Andrzej Sapkowski's Witcher series </i>: ...
+      - <i> Andrzej Sapkowski's Witcher series </i>: The Witcher series depicts the destinies of many characters intertwined with the destiny of a child, named Ciri. The writer tries to depict the inevitable links that exist among the destiny of different people. It also demonstrates life and death as a perpetual but not an ending concept where an event ends then another one begins, like the Ouroboros snake that eats its tail. I like the main ideas of the series, though I criticize some cases mentioned in the following.
+
+        The writer mentions these concepts explicitly within the text which I don't like because I believe a strong writer mentions multiple events and it lets you think about them to find out what was in its mind (that's what makes LOTR or HP different from the others). In addition, the writer mentions his ideas from the beginning till the end monotonically, and it does not surprise the reader as it knows from the starting point what is in the reader's mind (except for events like the death of Geralt and Yennefer and their companions or some very minor events e.g. erotic scenes). In addition, the writer didn't provide enough explanation of environments within the text for better imagination (you had to make something up by yourself), and instead it can be seen how detailed he demonstrated unnecessary things like the facial gestures of people when somebody is talking (like when Ciri is talking within the Lodge society of sorceresses at Monetecalvo) which it doesn't really matter.  Moreover, the writer exaggerates a child called Ciri, as the Lady of the World, which brings high expectations for the reader to see some special magic actions directly from this child (e.g. surviving the world). The ending was great as it links the perpetual love of Geralt and Yennefer in another world after their death, with the Ouroboros snake. 
+
+        Overall, I didn't like this series as much as the previous ones :). Quotes that I'd like to share with you:
+          - You can't stop a soldier from being frightened but you can give him motivation to help him overcome that fear.
+          - Fear appears only when you are uncertain.
+          - Sword of destiny has two blades. Everybody somehow are destined for each other.
+          - If the concept of will and submission, of commands and obedience, and of male ruler and servant woman will perish and diappear, then unity will be achieved. Then death would lose its meaning.
+          - A coward (like neutral) dies a hundred times. A brave man dies but once. But Dame Fortune the brave and holds cowards in contempt.
+          - Doing something for someone. Or perhaps for ourselves? For in fact we are always paying ourselves back and not someone else. Each time we are indebted we pay off the debt to ourselves. In each of us lies a creditor and a debtor at once and the art is for the reckoning to tally inside us.
+          - Despair and grief are known as great excuses.
+          - It is better to go forward without a goal, than to have a goal and stay in one place.
+          - When a goal beckons you, a way must be found.
     - **Watching movies**
     - **Travelling and nature**
 content:
