--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,36 @@ more_content: |
           - Despair and grief are known as great excuses.
           - It is better to go forward without a goal, than to have a goal and stay in one place.
           - When a goal beckons you, a way must be found.
+      - <i> Matt Haig's Midnight Library </i>: "It’s easy to mourn the lives we aren’t living. It takes no effort to miss the friends we didn’t make. But it is not the lives we regret not living that are the real problem. It is the regret itself. It’s the regret that makes us shrivel and wither and feel like our own and other people’s worst enemies. There are many other versions of our lives happening, including this one. We can’t visit every place or meet every person or do every job, yet most of what we’d feel in any life is still available. We don’t have to play every game to know what winning feels like. Love and laughter and fear and pain are universal currencies. We just have to close our eyes and savour the taste of the drink in front of us and listen to the song as it plays. We don’t have to do everything to be everything, because we are already infinite. We only need to be one person and feel one existence.” 
+
+        These words are from someone who called herself the end “Nobody, who has been everybody” after committing suicide, who has experienced thousands of lives to find the perfect life of herself.  She lived many things she wanted to be: a swimmer olympic champion, a glaciologist, a well-known singer, etc. 
+
+        She experienced many lives by undoing her regrets in a place called the midnight library, whose time is always 0:00:00. In each of them, she tries to find something like achievements, fame, and money, … which she thought could lead her to a better life. But after all, still, there was no life for her. However, she helps herself reduce her regrets by undoing them and being creative towards them. The more steps she takes, the more perspective she gets from life. 
+
+        She tries to reach the imaginations she had made of a great life before dying, but after each try, she sees both sides of that life, that there is no life with sheer happiness and sadness is intrinsically liked to the fabric of happiness. After each new life with a new perspective, her imagination changed about the best life. Maybe that could be a point. There is no best life because after each experience you find more of your vastness and you want to try your new borders. You regularly build your new imagination and forget the old ones (you are always limited to your imagination). 
+
+        She reached a point where there was no regret in life. She cleaned her mind of all her regrets, about what she thinks and how it ends up. That’s the point when she realizes the power of LOVE. She realizes the fundamental problem of her root life was an emptiness, the lack of loving and being loved. She finds a perfect life by loving her four-year-old kid, her husband, her home, and the town in which her home is. She was just very simply underestimating the big importance of the small things. But I forgot to say the new life works like this: You only have the memory of your root life, and when you live a new life, you only know the consequences of its action, you have no memory of it all. So in the last experience, there were awkward moments like she didn’t know the name of her child. This life was a lie to the version of her root life, she didn’t build it. 
+        
+        She truly wants to be in that perfect life, but the midnight library does not work that way. And the library and librarian all were going to become ash not because she is going to die but because she truly wants to live. The library and librarian were just a simplified version of reality both of whose meanings exist because of her. The only book that was not burning at the last moment of the library was her root life. She deeply feels alive. So at 00:01:20, she becomes alive by vomiting from overdose. 
+        
+        “It is quite a revelation to discover that the place you wanted to escape to is the exact same place you escaped from. That the prison wasn’t the place but the perspective.”
+        
+        Her brother came to her visit, which was one of the reasons for her suicide because she thought her brother became an alcoholic and does not give a shit about her. The next day, her friend responded to her text, which was another reason of suiciding because her friend saw her text message and didn’t respond. “It was interesting, she mused to herself, how life simply gave you a whole new perspective by waiting around long enough for you to see it.”
+        
+        These are a very brief overview of the Midnight Library by Matt Haig. But at last, I believe he is right, the best way to learn is to live, you don’t have to understand life. You just have to live it. And You will never live if you are only looking for the meaning of it”.
+
+
+        P.S. 1
+        
+        None of the sentences in this text belong to me. It belongs to the author or the characters.
+        
+        P.S. 2
+        
+        In this overview, I didn’t bring the explanation of how new sides of life open to her, like the concept of loneliness, parallel universes and the link between quantum physics and our lives, the consequence of being overloaded by non-friend friends in social media, difference between every lives and every possible lives (being out of your control), etc. Each one of these is covered in a different chapter which is worth reading in the book itself :).
+
+
+
+
     - **Watching movies**
     - **Travelling and nature**
 content:
