--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,3 +1,9 @@
+- name: MILA / Université de Montréal
+  dates: Sep. 2023 - present
+  qualification: Ph.D. Computer Science (DIRO)
+  description: | # this will include new lines to allow paragraphs
+
+
 - name: Sharif University of Technology
   dates: Sep 2017 - Sep 2022
   qualification: B.Sc. Computer Engineering
