New scholar account

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ trigger_darkmode:
 last_updated_time: 13th Sep 2023
 github_username: alirezadizaji
 linkedin_username: gil-estel-dizaji-43a634194
-googlescholar_username: rTdeQaMAAAAJ
+googlescholar_username: 5BnxuWAAAAAJ
 about_title: About Me
 about_profile_image: images/me.jpeg
 about_content: |
